force-app/main/default/objects/Kakao_Consult_Chat__c/Kakao_Consult_Chat__c.object-meta.xml
<CustomObject>
    <label>Kakao Consult Chat</label>
    <nameField>
        <displayFormat>KCC-{0000000000}</displayFormat>
        <label>Kakao Consult Chat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kakao Consult Chats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>