force-app/main/default/objects/Kakao_Consult_Chat__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Kakao Consult Chat</relationshipLabel>
    <relationshipName>Kakao_Consult_Chat</relationshipName>
    <type>Lookup</type>
</CustomField>