force-app/main/default/objects/Kakao_Consult_Chat__c/fields/Case_fm__c.field-meta.xml
<CustomField>
    <fullName>Case_fm__c</fullName>
    <formula>Case__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case fm</label>
    <type>Text</type>
</CustomField>