force-app/main/default/objects/Kakao_Consult_Chat__c/fields/KDCE_fm_CaseClosedDateTime__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_CaseClosedDateTime__c</fullName>
    <formula>Case__r.ClosedDate</formula>
    <label>Date/Time Case Closed</label>
    <type>DateTime</type>
</CustomField>