force-app/main/default/objects/Kakao_Consult_Chat__c/fields/KDCE_fm_FirstResponseTime__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_FirstResponseTime__c</fullName>
    <formula>IF(
  KDCE_ru_FirstResponseDateTime__c -  KDCE_ru_RequestDateTime__c &gt;= 0 ,
  TEXT( FLOOR( MOD( ( KDCE_ru_FirstResponseDateTime__c -  KDCE_ru_RequestDateTime__c ) * 24, 24 ) ) ) &amp; &quot;h &quot;
  &amp; TEXT( ROUND( MOD( ( KDCE_ru_FirstResponseDateTime__c -  KDCE_ru_RequestDateTime__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot;m &quot;
		&amp; TEXT( ROUND( MOD( ( KDCE_ru_FirstResponseDateTime__c -  KDCE_ru_RequestDateTime__c ) * 24 * 60 * 60, 60 ), 0) ) &amp; &quot;s&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Response Time (FM)</label>
    <type>Text</type>
</CustomField>