force-app/main/default/objects/Kakao_Consult_Chat__c/fields/KDCE_ru_FirstResponseDateTime__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ru_FirstResponseDateTime__c</fullName>
    <description>The date/time when an agent responds to the customer.</description>
    <label>First Response Date/Time</label>
    <summarizedField>Kakao_Chat_Feed__c.Sent_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Kakao_Chat_Feed__c.Sender__c</field>
        <operation>equals</operation>
        <value>Agent</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Kakao_Chat_Feed__c.CreatedById</field>
        <operation>notEqual</operation>
        <value>0051m000001pMd5AAE</value>
    </summaryFilterItems>
    <summaryForeignKey>Kakao_Chat_Feed__c.Kakao_Consult_Chat__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>