force-app/main/default/objects/Kakao_Consult_Chat__c/fields/KDCE_ru_RequestDateTime__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ru_RequestDateTime__c</fullName>
    <description>The date/time when a customer requests a Kakao Chat.</description>
    <label>Request Date/Time</label>
    <summarizedField>Kakao_Chat_Feed__c.Sent_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Kakao_Chat_Feed__c.Sender__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </summaryFilterItems>
    <summaryForeignKey>Kakao_Chat_Feed__c.Kakao_Consult_Chat__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>