force-app/main/default/objects/Kakao_Consult_Chat__c/fields/Last_Feed_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Feed_Time__c</fullName>
    <label>Last Feed Time</label>
    <summarizedField>Kakao_Chat_Feed__c.CreatedDate</summarizedField>
    <summaryForeignKey>Kakao_Chat_Feed__c.Kakao_Consult_Chat__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>