force-app/main/default/objects/Kakao_Consult_Chat__c/fields/Session_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_End_Time__c</fullName>
    <label>Session End Time</label>
    <type>DateTime</type>
</CustomField>