force-app/main/default/objects/Kakao_Consult_Chat__c/fields/Session_Live__c.field-meta.xml
<CustomField>
    <fullName>Session_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Session Live</label>
    <type>Checkbox</type>
</CustomField>