force-app/main/default/objects/Kakao_Consult_Chat__c/fields/User_Key__c.field-meta.xml
<CustomField>
    <fullName>User_Key__c</fullName>
    <externalId>true</externalId>
    <label>User Key</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>