force-app/main/default/objects/Kakao_Consult_Chat__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Session_Live__c</columns>
    <columns>Case__c</columns>
    <columns>Case_Status__c</columns>
    <columns>KDCE_ru_FirstResponseDateTime__c</columns>
    <columns>Last_Feed_Time__c</columns>
    <columns>KDCE_fm_CaseClosedDateTime__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Session_End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>