force-app/main/default/objects/Kakao_Consult_Chat__c/listViews/Session_Live.listView-meta.xml
<ListView>
    <fullName>Session_Live</fullName>
    <columns>NAME</columns>
    <columns>User_Key__c</columns>
    <columns>Session_Live__c</columns>
    <columns>Case__c</columns>
    <columns>Case_Status__c</columns>
    <columns>Last_Feed_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Session_End_Time__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Session_Live__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Session Live</label>
</ListView>